--- a/manifest.json
+++ b/manifest.json
@@ -6,17 +6,17 @@
     "action": {
         "default_popup": "popup.html",
         "default_icon": {
-            "16": "./images/eye.png",
-            "32": "./images/eye.png",
-            "48": "./images/eye.png",
-            "128": "./images/eye.png"
+            "16": "./images/logo.png",
+            "32": "./images/logo.png",
+            "48": "./images/logo.png",
+            "128": "./images/logo.png"
         }
     },
     "icons": {
-        "16": "./images/eye.png",
-        "32": "./images/eye.png",
-        "48": "./images/eye.png",
-        "128": "./images/eye.png"
+        "16": "./images/logo.png",
+        "32": "./images/logo.png",
+        "48": "./images/logo.png",
+        "128": "./images/logo.png"
     },
     "permissions": [
         "storage",
