--- a/manifest.json
+++ b/manifest.json
@@ -19,6 +19,17 @@
         "48": "./images/logo.png",
         "128": "./images/logo.png"
     },
+    "web_accessible_resources": [
+        {
+            "resources": [
+                "modal.html"
+            ],
+            "matches": [
+                "https://www.instagram.com/*",
+                "http://www.instagram.com/*"
+            ]
+        }
+    ],
     "permissions": [
         "storage",
         "activeTab",
